--- a/css/game.css
+++ b/css/game.css
@@ -1,138 +1,82 @@
-/* CSS Code, den es für die Game Page braucht */
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
 
-/* Hilfsklasse */
+#tic-tac-toe-board {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    gap: 10px;
+    width: 360px;
+    /* Increased from 180px */
+    height: 360px;
+    /* Increased from 180px */
+}
+
+.cell {
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-size: contain;
+}
+
+#restart-button {
+    background-color: #F27405;
+    border: none;
+    color: #fff;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 1em;
+    text-transform: uppercase;
+}
+
+#restart-button:hover {
+    background-color: #394D59;
+    /* Change to a darker shade for hover effect */
+    transform: scale(1.05);
+    /* Slightly enlarge the button on hover */
+    transition: background-color 0.3s, transform 0.3s;
+    /* Smooth transition for hover effect */
+}
+
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+
 .hidden {
-  display: none;
+    display: none;
 }
 
-/* Spiel-Container mit Beschreibung und Game-Over Text */
-.content-game {
-  min-height: 600px;
-}
-
-#game-container {
-  width: 600px;
-  margin: auto;
-}
-
-#game {
-  position: relative;
-  height: 300px;
-  cursor: pointer;
-}
-
-.game-info {
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
-#game-end {
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
-/* Elemente im Spiel */
-#game-background {
-  position: absolute;
-  width: 600px;
-  height: 300px;
-  background-image: url("../images/background.png");
-  background-size: cover;
-}
-
-.bg-animation {
-  animation: moveBg 10.33s linear infinite;
-}
-
-@keyframes moveBg {
-  0% {
-    background-position: 0 0;
-  }
-
-  100% {
-    background-position: -600px 0;
-  }
-}
-
-#game-dino {
-  height: 75px;
-  width: 75px;
-  top: 225px;
-  position: relative;
-  background-image: url("../images/dino.png");
-  background-size: cover;
-}
-
-.dino-dies {
-  background-color: red;
-}
-
-#game-rock {
-  width: 50px;
-  height: 50px;
-  position: relative;
-  top: 175px;
-  left: 550px;
-  background-image: url("../images/rock.png");
-  background-size: cover;
-}
-
-.rock-animation {
-  animation: rock 1.33s infinite;
-}
-
-@keyframes rock {
-  0% {
-    left: 550px;
-  }
-
-  100% {
-    left: -50px;
-  }
-}
-
-.jump-animation {
-  animation: jump 0.5s;
-}
-
-@keyframes jump {
-  0% {
-    top: 225px;
-  }
-
-  50% {
-    top: 75px;
-  }
-
-  75% {
-    top: 75px;
-  }
-
-  100% {
-    top: 225px;
-  }
-}
-
-#game-start {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  opacity: 0.7;
-  background: black;
-}
-
-.startScreenText {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  color: white;
-}
-
-#game-score {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 12px;
+#popup-button {
+    background-color: #F27405;
+    border: none;
+    color: #fff;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 1em;
+    text-transform: uppercase;
 }
