--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,20 @@
-/* CSS Code, den es für die Start Page braucht */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+    margin: 20px 0;
+}
+
+p {
+    text-align: center;
+    margin: 20px 0;
+}
+
+section {
+    margin-bottom: 20px;
+}
